--- a/index.html
+++ b/index.html
@@ -917,6 +917,14 @@
                 text-align: center;
             }
         }
+          .logo-image {
+        height: 50px;  /* ← Logo más pequeño en móvil */
+    }
+    
+    header {
+        padding: 0.3rem 0;  /* ← Header más compacto en móvil */
+    }
+
     </style>
 </head>
 <body>
