--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         }
 
         .logo-image {
-            height: 150px;
+            height: 180px;
             width: auto;
             object-fit: contain;
             filter: drop-shadow(0 2px 8px rgba(58, 99, 155, 0.4));
@@ -878,16 +878,25 @@
                 padding: 0 1.5rem;
             }
 
+            .logo-image {
+                height: 120px;
+            }
+
             .nav-links {
                 display: none;
             }
 
             .hero {
                 padding: 8rem 1.5rem 5rem 1.5rem;
+                margin-top: 60px;
             }
 
             .hero-text h1 {
                 font-size: 2.5rem;
+            }
+
+            .hero-text p {
+                font-size: 1.1rem;
             }
 
             .hero-stats {
@@ -895,20 +904,77 @@
                 gap: 1.5rem;
             }
 
+            .hero-buttons {
+                flex-direction: column;
+            }
+
+            .btn-primary, .btn-secondary {
+                width: 100%;
+                text-align: center;
+            }
+
+            .features {
+                padding: 4rem 1.5rem;
+            }
+
             .features-grid {
                 grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .feature-card {
+                padding: 2rem;
+            }
+
+            .services {
+                padding: 4rem 1.5rem;
+            }
+
+            .service-card {
+                padding: 2rem;
             }
 
             .mockup-row {
                 grid-template-columns: 1fr;
             }
 
+            .mockup-nav {
+                flex-wrap: wrap;
+                gap: 1rem;
+            }
+
             .section-header h2 {
                 font-size: 2.2rem;
             }
 
+            .section-header p {
+                font-size: 1rem;
+            }
+
+            .cta {
+                padding: 4rem 1.5rem;
+            }
+
+            .cta-content h2 {
+                font-size: 2rem;
+            }
+
+            .cta-content p {
+                font-size: 1.1rem;
+            }
+
+            .cta-buttons {
+                flex-direction: column;
+            }
+
+            .btn-cta {
+                width: 100%;
+                text-align: center;
+            }
+
             .footer-content {
                 grid-template-columns: 1fr;
+                gap: 2.5rem;
             }
 
             .footer-bottom {
@@ -916,14 +982,50 @@
                 gap: 1.5rem;
                 text-align: center;
             }
+
+            .footer-bottom-links {
+                flex-direction: column;
+                gap: 1rem;
+            }
         }
-          .logo-image {
-        height: 50px;  /* ← Logo más pequeño en móvil */
-    }
-    
-    header {
-        padding: 0.3rem 0;  /* ← Header más compacto en móvil */
-    }
+
+        @media (max-width: 480px) {
+            .logo-image {
+                height: 100px;
+            }
+
+            header {
+                padding: 0.5rem 0;
+            }
+
+            .hero-text h1 {
+                font-size: 2rem;
+            }
+
+            .stat-number {
+                font-size: 2rem;
+            }
+
+            .dashboard-mockup {
+                padding: 1.5rem;
+            }
+
+            .mockup-content {
+                padding: 1.2rem;
+            }
+
+            .card-value {
+                font-size: 1.5rem;
+            }
+
+            .section-header h2 {
+                font-size: 1.8rem;
+            }
+
+            .cta-content h2 {
+                font-size: 1.8rem;
+            }
+        }
 
     </style>
 </head>
